public/analytics/v0.8/_sources/reference/tmlt/analytics/_privacy_budget_rounding_helper/index.rst.txt
:orphan:



**************************************
_privacy_budget_rounding_helper
**************************************

.. py:module:: tmlt.analytics._privacy_budget_rounding_helper

.. autoapi-nested-parse::

   Helper functions for dealing with budget floating point imprecision.











Functions
=========

.. list-table::

   * - :func:`.requested_budget_is_slightly_higher_than_remaining`
     - Returns True if requested budget is slightly larger than remaining.
   * - :func:`.get_adjusted_budget_number`
     - Converts a requested int or float budget into an adjusted budget.
   * - :func:`.get_adjusted_budget`
     - Converts a requested privacy budget into an adjusted privacy budget.

.. py:function:: requested_budget_is_slightly_higher_than_remaining(requested_budget, remaining_budget)

   Returns True if requested budget is slightly larger than remaining.

   This check uses a relative tolerance, i.e., it determines if the requested
   budget is within X% of the remaining budget.

   :param requested_budget: Exact representation of requested budget.
   :param remaining_budget: Exact representation of how much budget we have left.



.. py:function:: get_adjusted_budget_number(requested_budget, remaining_budget)

   Converts a requested int or float budget into an adjusted budget.

   If the requested budget is "slightly larger" than the remaining budget, as
   determined by some threshold, then we round down and consume all remaining
   budget. The goal is to accommodate some degree of floating point imprecision by
   erring on the side of providing a slightly stronger privacy guarantee
   rather than declining the request altogether.

   :param requested_budget: The numeric value of the requested budget.
   :param remaining_budget: The numeric value of how much budget we have left.



.. py:function:: get_adjusted_budget(requested_privacy_budget, remaining_privacy_budget)

   Converts a requested privacy budget into an adjusted privacy budget.

   For each term in the privacy budget, calls get_adjusted_budget_number to adjust
   the requested budget slightly if it's close enough to the remaining budget.

   :param requested_privacy_budget: The requested privacy budget.
   :param remaining_privacy_budget: How much privacy budget we have left.








